<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollMainScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonBackArrow"
                android:layout_width="@dimen/small_button_size"
                android:layout_height="@dimen/small_button_size"
                android:layout_marginStart="@dimen/margin_36"
                android:layout_marginTop="@dimen/margin_36"
                android:background="@drawable/ic_back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonBags"
                android:layout_width="@dimen/small_button_size"
                android:layout_height="@dimen/small_button_size"
                android:layout_marginTop="@dimen/margin_36"
                android:layout_marginEnd="@dimen/margin_36"
                android:background="@drawable/ic_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_9"
                android:layout_marginEnd="@dimen/margin_9"
                android:fontFamily="@font/marc_pro_medium"
                android:text="@string/add_address"
                android:textColor="@color/black"
                android:textSize="@dimen/size_font_15"
                app:layout_constraintEnd_toStartOf="@+id/buttonBags"
                app:layout_constraintTop_toTopOf="@+id/buttonBags" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_50"
                android:fontFamily="@font/mark_pro_bold"
                android:text="@string/my_cart"
                android:textColor="@color/black"
                android:textSize="@dimen/size_35"
                app:layout_constraintStart_toStartOf="@+id/buttonBackArrow"
                app:layout_constraintTop_toBottomOf="@+id/buttonBackArrow" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_269"
                android:background="@drawable/box_round_corners"
                android:paddingBottom="@dimen/margin_44"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/purchasesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_270"
                    android:layout_marginTop="@dimen/margin_55"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_purchases" />

                <ImageView
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.25"
                    android:src="@drawable/separator"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/purchasesRecyclerView" />

                <TextView
                    android:id="@+id/textTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_55"
                    android:layout_marginTop="@dimen/margin_15"
                    android:text="@string/total"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider1" />

                <TextView
                    android:id="@+id/textTotalSum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_194"
                    android:layout_marginTop="@dimen/margin_15"
                    android:fontFamily="@font/mark_pro_bold"
                    android:text="@string/_0_00_us"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/textTotal"
                    app:layout_constraintTop_toBottomOf="@+id/divider1" />

                <TextView
                    android:id="@+id/textDelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_12"
                    android:text="@string/delivery"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@+id/textTotal"
                    app:layout_constraintTop_toBottomOf="@+id/textTotal" />

                <TextView
                    android:id="@+id/textDeliveryStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_194"
                    android:layout_marginTop="@dimen/margin_12"
                    android:fontFamily="@font/mark_pro_bold"
                    android:text="@string/free"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/textDelivery"
                    app:layout_constraintTop_toBottomOf="@+id/textTotal" />

                <ImageView
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_26"
                    android:alpha="0.25"
                    android:paddingBottom="@dimen/margin_90"
                    android:src="@drawable/separator"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textDelivery" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:layout_width="@dimen/width_326"
        android:layout_height="@dimen/height_54"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_44"
        android:background="@drawable/button_round"
        android:backgroundTint="@color/ocher"
        android:text="@string/checkout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/size_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>